--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -62,6 +62,10 @@ body * {
   transition: all 0.2s ease;
   font-family: 'Strawford', sans-serif;
   background-color: rgba(0,0,0,0);
+
+  &:focus {
+    outline: none;
+  }
 }
 
 body {
